fixed minor issues with vision board images overlapping navbar

--- a/Project-2/public/styles/pageStyle.css
+++ b/Project-2/public/styles/pageStyle.css
@@ -12,6 +12,7 @@ body {
 }
 
 #navbar {
+    z-index: 1000;
     width: 100%;
     border-bottom: 4px solid black;
     background-color: rgb(121, 56, 56);
